# ignibyte-bridge

./: .rereview-workflow.js  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: AGENT-BRIDGE.md  CODE-REVIEW-2026-06-10-fixes.md  CODE-REVIEW-2026-06-10.md  DESIGN.md  HANDOFF.md  HOW-IT-WORKS.md
docs/review/: findings-2026-06-10.json  rereview-findings-2026-06-10.json
src/: clean.rs  daemon.rs  doctor.rs  keys.rs  lib.rs  logs.rs  main.rs  paths.rs  procinfo.rs  protocol.rs  session.rs
tests/: cli.rs  daemon.rs
tests/common/: mod.rs
