[package]
name = "ignibyte-bridge"
version = "0.1.0"
edition = "2021"
description = "Local persistent PTY session controller for AI coding agents"
authors = ["Ignibyte"]
license = "MIT"
repository = "https://github.com/Ignibyte/ignibyte-bridge"
homepage = "https://github.com/Ignibyte/ignibyte-bridge"
readme = "README.md"
keywords = ["pty", "terminal", "agent", "tmux", "automation"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
directories = "6"
libc = "0.2"
nix = { version = "0.29", features = ["fs", "signal"] }
portable-pty = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shell-words = "1"
vt100 = "0.16.2"

[dev-dependencies]
assert_cmd = "2"
libc = "0.2"
predicates = "3"
tempfile = "3"
